# ccmemory

./: .travis.yml  ANNOUNCE  Makefile.am  NEWS  README  README.md  acinclude.m4  configure.ac
doc/: ccmemory.texi  macros.texi
meta/scripts/: ccmemory.pc.in
meta/slackware/: slack-desc.in
meta/travis-ci/: install-ccexceptions.sh  install-cctests.sh
src/: ccmemory-blocks.c  ccmemory-exception-handlers.c  ccmemory-internals.h  ccmemory-standard-allocator.c  ccmemory-version.c  ccmemory.h
tests/: ascii-strings.c  asciiz-strings.c  exception-handlers.c  memory-blocks.c  standard-allocator.c  version.c
